--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,8 +18,10 @@
   <body>
     <!------- Header / Branding ------->
     <header class="site-header">
-      <img src="img/loreal-logo.png" alt="L'Oréal Logo" class="logo" />
-      <h1 class="site-title">Smart Routine &amp; Product Advisor</h1>
+      <div class="header-content">
+        <img src="img/loreal-logo.png" alt="L'Oréal Logo" class="logo" />
+        <h1 class="site-title">Smart Routine &amp; Product Advisor</h1>
+      </div>
     </header>
 
     <div class="page-wrapper">
@@ -27,8 +29,14 @@
       <div class="main-content">
         <!-- Products Section -->
         <div class="products-section">
-          <!-- Category Filter -->
+          <!-- Category Filter and Search -->
           <div class="search-section">
+            <input 
+              type="text" 
+              id="productSearch" 
+              placeholder="Search products by name, brand, or description..."
+              class="search-input"
+            />
             <select id="categoryFilter">
               <option value="" disabled selected>Choose a Category</option>
               <option value="cleanser">Cleansers</option>
@@ -42,6 +50,9 @@
               <option value="fragrance">Fragrance</option>
             </select>
           </div>
+
+          <!-- Product Info/Notification Area -->
+          <div id="productNotification" class="product-notification"></div>
 
           <!-- Products Grid -->
           <div id="productsContainer" class="products-grid"></div>
@@ -93,8 +104,7 @@
       </footer>
     </div>
 
-    <!-- secrets.js can be removed when using Cloudflare Workers for API requests -->
-    <script src="secrets.js"></script>
+    <!-- JavaScript files for application functionality -->
     <script src="js/products.js"></script>
     <script src="js/tooltips.js"></script>
     <script src="js/chat.js"></script>
