--- a/index.html
+++ b/index.html
@@ -56,7 +56,19 @@
 
           <!-- Products Grid -->
           <div id="productsContainer" class="products-grid"></div>
+
+          <div class="site-footer">
+            <p>&copy; 2025 L'Oréal. All rights reserved.</p>
+            <nav>
+              <!-- These URLs are placeholders -->
+              <a href="#">Privacy Policy</a>
+              <a href="#">Terms of Use</a>
+              <a href="#">Contact</a>
+            </nav>
+          </div>
         </div>
+
+        
 
         <!-- Chat Section -->
         <div class="chat-section">
@@ -93,15 +105,7 @@
       </div>
 
       <!------- Footer Links ------->
-      <footer class="site-footer">
-        <p>&copy; 2025 L'Oréal. All rights reserved.</p>
-        <nav>
-          <!-- These URLs are placeholders -->
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Use</a>
-          <a href="#">Contact</a>
-        </nav>
-      </footer>
+      
     </div>
 
     <!-- JavaScript files for application functionality -->
